--- a/webdemo-web/src/main/webapp/WEB-INF/html/login/login.html
+++ b/webdemo-web/src/main/webapp/WEB-INF/html/login/login.html
@@ -45,7 +45,6 @@
         window.location.href = "/login/register_page";
     }
     function login() {
-        debugger;
         var userName = $("#userName").val();
         if (!userName) {
             alert("用户名不能为空");
@@ -63,8 +62,11 @@
             function (data) {
                 if (data.isSuccess){
                     alert("登录成功,马上去首页看看");
+                    window.location.href = "/index";
+                }else {
+                    alert("登录失败，用户名或密码错误");
+                    return ;
                 }
-                window.location.href = "/index";
             });
     }
 </script>
