--- a/webdemo-web/src/main/webapp/static/html/login/login.html
+++ b/webdemo-web/src/main/webapp/static/html/login/login.html
@@ -64,7 +64,7 @@
                     alert("登录成功,马上去首页看看");
                     window.location.href = "/index";
                 }else {
-                    alert("登录失败，用户名或密码错误");
+                    alert(data.message);
                     return ;
                 }
             });
